About myself and reason for studying Software Engineering complete

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>David Lim's Website</title>
+        <title>David Lim</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
     <h1>David Lim</h1>
+
+<Section>
+    <h2>About Myself</h2>
+
+    <p>A curious person who loves to learn new things, passion for playing video games and enjoys eating delicious food. </p>
+
+</Section>
+<section></section>
+    <h3>So why did I decide to study Software Engineering?</h3>
+    <p>
+        I have decided to learn software engineering to gain the knowledge of programming languages and software development, to develop myself and work my way into the field of software engineering.
+    </p>
+</section>
+
+
+
+
+
+
+
+
+<Footer>
+    
+</Footer>
     </body>
 </html>
