updated image file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>David Lim</h1>
 
 <section>
-    <h2>So why did I decide to study Software Engineering?</h2>
+    <h2 class="h2">So why did I decide to study Software Engineering?</h2>
     <p class="para">
         To put it shortly, I have decided to learn software engineering to gain the knowledge of programming languages and software development, to develop myself and work my way into the field of software engineering.
     </p>
