--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>David Lim</h1>
 
 <section>
-    <h2 class="h2">So why did I decide to study Software Engineering?</h2>
+    <h2 class="h2 clearfi">So why did I decide to study Software Engineering?</h2>
     <p class="para">
         To put it shortly, I have decided to learn software engineering to gain the knowledge of programming languages and software development, to develop myself and work my way into the field of software engineering.
     </p>
@@ -20,12 +20,16 @@
      Working in hospitality my whole career life, it made me wonder how everything is set up, so that it helps to make things run smoother. From the hotel website to book rooms to how POS is set up to place orders, there is always a factor of coding to make sure everything runs smoothly.
     </p>
 
-   <p class="para">
+   <p class="para p3">
     Growing up playing games as well, from slaughtering demons in Diablo 2 to catching and training pokemon in Pokemon Yellow, it made me wonder if I have the potential to develop a game that many people would enjoy. Depending on where my journey takes me with software engineering, I am determined to learn to the best of my capabilties and broaden my future in the world of technology.
    </p> 
 
    <img class="img clearfix" src="./CSS/Charmander.png" alt="Charmander">
 </section>
+
+<Footer>
+    <a href="https://www.facebook.com/DavidLim93"><img id="logo" src="./CSS/Facebook_f_logo_(2021).png" alt="Facebook"></a>
+</Footer>
 </div>
     </body>
 </html>
