--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <Footer>
     <a href="https://www.facebook.com/DavidLim93"><img id="logo" src="./CSS/Facebook_f_logo_(2021).png" alt="Facebook"></a>
+
+    <a href="https://www.linkedin.com/in/david-lim-16b4a1210/"><img id="logo2" src="./CSS/Linkedin_Logo.png" alt="Linkedin"></a>
 </Footer>
 </div>
     </body>
