Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>David Lim</title>
+        <title>So why did I decide to study Software Engineering?</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./CSS/style.css" rel="stylesheet">
     </head>
     <body>
         <div class="wrapper">
-    <h1>David Lim</h1>
 
-<section>
+
+<section class="para">
     <h2 class="h2 clearfix">So why did I decide to study Software Engineering?</h2>
     <p class="p1 clearfix">
         To put it shortly, I have decided to learn software engineering to gain the knowledge of programming languages and software development, to develop myself and work my way into the field of software engineering.
@@ -25,13 +25,13 @@
    </p> 
 
    <img class="img clearfix" src="./CSS/Charmander.png" alt="Charmander">
+
+    <a class="back article" href="https://davidlim93.github.io/Portfolio/">Back to main page</a>
+
+   
+
 </section>
 
-<Footer>
-    <a href="https://www.facebook.com/DavidLim93"><img id="logo" src="./CSS/Facebook_f_logo_(2021).png" alt="Facebook"></a>
-
-    <a href="https://www.linkedin.com/in/david-lim-16b4a1210/"><img id="logo2" src="./CSS/Linkedin_Logo.png" alt="Linkedin"></a>
-</Footer>
 </div>
     </body>
 </html>
